--- a/public/index.html
+++ b/public/index.html
@@ -264,7 +264,6 @@ Chris McCord is a programmer with a passion for science and building things and 
 
 
         </div>
-      </div>
 
       <hr class="featurette-divider">
 
@@ -475,8 +474,30 @@ By the end of my talk I hope other people will feel the same way as I do about E
             </div>
           </div>
 
-        </div> <!-- col-md-12 -->
-      </div> <!-- row -->
+      
+       <div class="col-md-3">
+         <img class="img-circle center-block" 
+           src="/images/speakers/24617564_n727615181_3779084_6783_400x400.jpg" height="140px" alt="Devin Torres">
+         <h2 class="text-center">Devin&nbsp;Torres</h2>
+         <div class="collapse-group">
+           <span class="talk-title">TBD
+             <a class="btn" href="#"><span class="caret"></a>
+           </span>
+           <div class="collapse detail">
+             <h3>Presentation</h3>
+             <p>TBD
+             </p>
+
+             </p>
+             <h3>Bio</h3>
+             <p>Professional Elixir developer and OTP evangelist. Author of several Erlang and Elixir libraries of varying popularity.</p>
+             </p>
+           </div>
+         </div>
+       </div>
+     </div> <!-- col-md-12 -->
+   </div> <!-- row -->
+
 
       <hr class="featurette-divider">
 
