added devin's talk

--- a/public/index.html
+++ b/public/index.html
@@ -480,12 +480,13 @@ By the end of my talk I hope other people will feel the same way as I do about E
            src="/images/speakers/24617564_n727615181_3779084_6783_400x400.jpg" height="140px" alt="Devin Torres">
          <h2 class="text-center">Devin&nbsp;Torres</h2>
          <div class="collapse-group">
-           <span class="talk-title">TBD
+           <span class="talk-title">The Excitement of Elixir
              <a class="btn" href="#"><span class="caret"></a>
            </span>
            <div class="collapse detail">
              <h3>Presentation</h3>
-             <p>TBD
+             <p>
+             Elixir stopped being a pretty syntax on top of Erlang a long time ago, and has developed into a formidable solution all its own. We will explore how Elixir's willingness to change has enabled developers to leverage powerful tools such as macros, protocols, streams, agents, and much more.
              </p>
 
              </p>
