--- a/public/index.html
+++ b/public/index.html
@@ -247,7 +247,7 @@ Richard is a long time Rubyist that, like many others, has found the same joy in
               src="/images/speakers/24617564_avatar-resized.png_.png" height="140px" alt="Chris McCord">
             <h2 class="text-center">Chris&nbsp;McCord</h2>
             <div class="collapse-group">
-              <span class="talk-title">Rise of The Phoenix - Building an Elixir Web Framewor
+              <span class="talk-title">Rise of The Phoenix - Building an Elixir Web Framework
                 <a class="btn" href="#"><span class="caret"></a>
               </span>
               <divp class="collapse detail">
