--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Jim Freeze">
     <link rel="shortcut icon" href="/favicon.ico" />
 
-    <title><%= @title %></title>
+    <title>ElixirConf 2014</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/bootstrap-3.1.1-dist/css/bootstrap.min.css" rel="stylesheet">
