added rirding talk info

--- a/public/index.html
+++ b/public/index.html
@@ -135,12 +135,12 @@
             <img class="img-circle center-block" src="/images/speakers/virding.jpg" height="140px" alt="">
             <h2 class="text-center">Robert&nbsp;Virding</h2>
             <div class="collapse-group">
-              <span class="talk-title">TBD
+              <span class="talk-title">Erlang Rationale
                 <a class="btn" href="#"><span class="caret"></a>
               </span>
               <div class="collapse detail">
                 <h3>Presentation</h3>
-                <p>TBD</p>
+                <p>This talk covers the history of Erlang and explains what problems we were trying to solve, the rationale behind how we solved them, and what the results were.</p>
                 <h3>Bio</h3>
                 <p>Co-inventor of Erlang, Principal Language Expert @ Erlang Solutions
                 </p>
