--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,7 @@ I'm the CTO of Isotope11, a mildly successful software development company that 
               src="/images/speakers/24617564_08d4b3f.jpg" height="140px" alt="Richard Bishop">
             <h2 class="text-center">Richard&nbsp;Bishop</h2>
             <div class="collapse-group">
-              <span class="talk-title">The First Few Sip
+              <span class="talk-title">The First Few Sips
                 <a class="btn" href="#"><span class="caret"></a>
               </span>
               <div class="collapse detail">
