--- a/public/index.html
+++ b/public/index.html
@@ -545,6 +545,8 @@ By the end of my talk I hope other people will feel the same way as I do about E
             </a>
           </h2>
           <p class="lead">2525 W. Anderson Lane, Suite 365, Austin, Texas 78757</p>
+          <h2>Transportation from Hotel to Venue</h2>
+          <p class="">The conference hotel (Hyatt Place Austin/Arboretum) provides a shuttle that will run daily to the conference venue (Norris Conference Center).</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="/images/norris.jpg" alt="Norris Conference Center">
@@ -587,6 +589,68 @@ By the end of my talk I hope other people will feel the same way as I do about E
       </div>
 
       <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Code of Conduct</h2>
+          <p class="lead"> ElixirConf is a community conference created to promote education, networking and collaboration within the Elixir/Erlang communities.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="/images/yellow-ribbon-banner-hi.png" alt="Norris Conference Center">
+        </div>
+
+        <div class="col-md-7">
+
+          <p>We value the participation of each member of the community and want all attendees to have an enjoyable and fulfilling experience. Attendees are expected to act with decorum, showing respect and acceptance to other attendees throughout the conference, and at all conference events, whether officially sponsored by ElixirConf or not.</p>
+
+          <p>All delegates, speakers, exhibitors, and volunteers at ElixirConf are required to conform to the following Code of Conduct. Organizers will implement this code throughout the event.</p>
+
+          <ul>
+            <li>Be honest.</li>
+            <li>Use respectful language and actions.</li>
+            <li>Be inclusive.</li>
+            <li>Respect culture and custom.</li>
+            <li>Consider your actions and act with integrity.</li>
+            <li>Use good judgment and avoid even the appearance of improper behavior. </li>
+            <li>Follow the law.</li>
+            <li>Be accountable.</li>
+           </ul>
+
+          If ever in doubt about a course of conduct, ask yourself: 
+          <ul>
+            <li>Is it ethical?</li>
+            <li>Is it legal?</li>
+            <li>Will it reflect well on me and ElixirConf?</li>
+            <li>Would I want to read about it in the newspaper or on the web?</li>
+          </ul>
+
+          <p>If the answer is “No” to any of these questions, don’t do it.</p>
+
+
+          <p>Thank you for helping make this a welcoming, friendly event for all.</p>
+
+
+          <h3>LEGAL DETAILS</h3>
+          <p>Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
+
+          <p>Speakers, attendees, exhibitors, sponsors and vendors are subject to the code of conduct. Speakers, sponsors and exhibitors should not use profane, vulgar or sexual images, activities, or other material. Booth staff (including volunteers) should not wear revealing clothing/uniforms/costumes, or otherwise create a sexualized environment.</p>
+
+          <p>Talks should be appropriate for both a professional audience, and a younger audience. Imagery and language (both written and spoken), are to be free of profane, vulgar or sexual content.</p>
+
+          <p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
+
+          <p>If a participant engages in behavior that violates this code of conduct, the conference organizers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.</p>
+
+          <h3>CONTACT INFORMATION</h3>
+          <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff. Conference staff will be wearing  "Staff” t-shirts. You may also contact the venue staff and ask to be put in touch with the conference organizer — Jim Freeze.</p>
+
+          <p>If the matter is especially urgent, please call/contact Jim Freeze at +1 (512) 949-9683.</p>
+
+          <p>Conference staff will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
+
+           
+        </div>
+      </div>
 
       <!-- /END THE FEATURETTES -->
 
