--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,17 @@
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
+      <div class="row text-center">
+        <div class="col-lg-4 col-lg-push-4">
+        <h1>ElixirConf 2014, July&nbsp;25-26, Austin,&nbsp;TX</h1>
+        <p><a class="btn btn-lg btn-primary" href="https://www.eventbrite.com/e/elixirconf-2014-tickets-11044184453" role="button">Reserve your seat</a></p>
+      </div>
+    </div>
+      <hr class="featurettedivider">
+    </div>
+
+
+    <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
