added schedule. Removed Johnny

--- a/public/index.html
+++ b/public/index.html
@@ -133,15 +133,74 @@
 
       <div class="row">
         <div class="col-md-12 center-block">
+          <span class="app-title center-block text-center">Schedule</span>
+          <div class="col-md-2">
+          </div>
+          <div class="col-md-10">
+            <table class="schedule">
+              <tr class="header"><th colspan="3">FRIDAY, JULY 25, 2014</th></tr>
+              <tr>
+                <th>Time</th>
+                <th>Speaker</th>
+                <th>Description</th>
+              </tr>
+              <tr class="lunch"><td class="t">08:00 - 08:45 AM</td><td>Registration/Breakfast</td><td>Assorted donuts, Sausage Kolachees, Fresh Juices, Fruit, Yogurts &amp; Granola</td></tr>
+              <tr class="welcome"><td class="t">08:45 - 09:00 AM</td><td>Welcome</td><td></td></tr>
+              <tr><td class="t">09:00 - 10:00 AM</td><td>Dave Thomas</td><td>Opening Keynote</td></tr>
+              <tr><td class="t">10:00 - 10:45 AM</td><td>Richard Bishop</td><td class="ttl">The First Few Sips</td></tr>
+              <tr class="break"><td class="t">10:45 - 11:00 AM</td><td>BREAK</td><td></td></tr>
+              <tr><td class="t">11:00 - 11:45 AM</td><td>Josh Adams</td><td class="ttl">Introduction to Elixir for Rubyists</td></tr>
+              <tr><td class="t">11:45 - 12:30 PM</td><td>Eric Meadows–Jönsson</td><td class="ttl">Hex - How it was built</td></tr>
+              <tr class="lunch"><td class="t">12:30 - 01:30 PM</td><td>LUNCH</td><td>BBQ Chicken & Brisket, Ranch Beans, Cole Slaw &amp; Potato Salad, (Vegetarian &amp; Special Request options available, please inform registrar)</td></tr>
+              <tr><td class="t">01:30 - 02:15 PM</td><td>James Smith</td><td class="ttl">Writing Command Line Applications with Elixir</td></tr>
+              <tr><td class="t">02:15 - 03:00 PM</td><td>Greg Vaughn</td><td class="ttl">Elixir Elevated</td></tr>
+              <tr class="break"><td class="t">03:00 - 03:30 PM</td><td>BREAK</td><td>Fresh baked Cookies &amp; Fudge Brownies, Chex Mix and Trail Mixes</td></tr>
+              <tr><td class="t">03:30 - 04:15 PM</td><td>Filipe Varjão</td><td class="ttl">Elixir - Evaluating Performance of language</td></tr>
+              <tr><td class="t">04:15 - 05:00 PM</td><td>Stephen Pallen</td><td class="ttl">Elixir in an Enterprise Telecommunications Product</td></tr>
+              <tr class="lunch"><td class="t">05:00 - 11:59 PM</td><td>Self Organized Events</td><td></td></tr>
+            </table>
+            <br> <br>
+
+            <table class="schedule">
+              <tr class="header"><th colspan="3">SATURDAY, JULY 26, 2014</th></tr>
+              <tr>
+                <th>Time</th>
+                <th>Speaker</th>
+                <th>Description</th>
+              </tr>
+              <tr class="lunch"><td class="t">08:00 - 09:00 AM</td><td>Registration/Breakfast</td><td>Assorted donuts, Breakfast Tacos, Fresh Baked Scones, Fresh Juices, Fruit, Yogurts &amp; Granola</td></tr>
+              <tr><td class="t">09:00 - 09:45 AM</td><td>Robert Virding</td><td class="ttl">Erlang Rationale</td></tr>
+              <tr><td class="t">09:45 - 10:30 AM</td><td>Francesco Cesarini</td><td class="ttl">Thinking in a Highly Concurrent, Mostly-functional Language</td></tr>
+              <tr class="break"><td>10:30 - 10:45 AM</td><td>BREAK</td><td></td></tr>
+              <tr><td class="t">10:45 - 11:30 AM</td><td>Devin Torres</td><td class="ttl">The Excitement of Elixir</td></tr>
+              <tr><td class="t">11:30 - 12:15 PM</td><td>Bruce Tate</td><td class="ttl">Pipe Dreams</td></tr>
+              <tr class="lunch"><td class="t">12:15 - 01:15 PM</td><td>LUNCH</td><td>Chicken Fried Chicken &amp; Country Gravy, Mashed Potatoes, Green Beans, (Vegetarian & Special Request options available, please inform registrar)</td></tr>
+              <tr><td class="t">01:15 - 02:00 PM</td><td>Martin Schurrer</td><td class="ttl">OTP in production: The nitty-gritty details of game servers</td></tr>
+              <tr><td class="t">02:00 - 02:45 PM</td><td>Chris McCord</td><td class="ttl">Rise of The Phoenix - Building an Elixir Web Framework</td></tr>
+              <tr class="break"><td class="t">02:45 - 03:15 PM</td><td>BREAK</td><td>Chocolate Cake &amp; Ice Cold Milk, Chips and Salsa</td></tr>
+              <tr><td class="t">03:15 - 04:15 PM</td><td>Panel</td><td>José Valim, Dave Thomas, Robert Virding, Francesco Cesarini</td></tr>
+              <tr><td class="t">04:15 - 05:15 PM</td><td>José Valim</td><td>Closing Keynote</td></tr>
+
+            </table>
+            <br> <br>
+            <p>COMMONS: Served All Day: Fresh Brewed Coffee, Decaf & Hot Herbal Teas and Sodas
+            </p>
+
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-md-12 center-block">
           <span class="app-title center-block text-center">Speakers</span>
+        <br>
         </div>
 
 
         <div class="col-md-2">
         </div>
         <div class="col-md-10">
-
-
           <div class="col-md-5">
             <img class="img-circle center-block" src="/images/speakers/virding.jpg" height="140px" alt="">
             <h2 class="text-center">Robert&nbsp;Virding</h2>
@@ -478,28 +537,6 @@ By the end of my talk I hope other people will feel the same way as I do about E
                 </p>
                 <h3>Bio</h3>
                 <p>I've worked professionally in 6 languages, currently in Ruby at LivingSocial, but my free time goes to learning Elixir. The Erlang ecosystem is new and fascinating to me. I wonder why I'd never explored it before. I taught myself to program at age 13, but took a detour into physics during college. I'm a 7th generation Texan currently living in the Dallas area.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <img class="img-circle center-block" 
-              src="/images/speakers/24617564_johnny.jpg" height="140px" alt="Johnny Winn">
-            <h2 class="text-center">Johnny&nbsp;Winn</h2>
-            <div class="collapse-group">
-              <span class="talk-title">Elixir = Ruby, a Pattern Matching
-                <a class="btn" href="#"><span class="caret"></a>
-              </span>
-              <div class="collapse detail">
-                <h3>Presentation</h3>
-                <p>Object-oriented programmers can have a dogmatic approach to language patterns. Whether it is analyzing, debating or criticizing various implementations, the passion for patterns emerges from the need to both communicate intent and categorize code. The patterns do more than define code, they describe it. So, what happens when we lose objects? When state fades away? When paradigms shift far more than a change in languages?
-                </p>
-
-                <p>In steps Elixir. With syntax similar to Ruby but firmly grounded in the functional paradigm, it represents an easy transition for Rubyist into functional programming. But what about the beloved patterns? It turns out that understanding how functional languages implement some of the common object-oriented patterns can demystify this new paradigm. Plus learning new functional patterns can provide new solutions to old problems.
-                </p>
-                <h3>Bio</h3>
-                <p>Rocketeer @ Hashrocket &amp; curator for the Elixir Fountain, a weekly newsletter chronicling the Elixir community.  
                 </p>
               </div>
             </div>
