minor text updates

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
                 <th>Speaker</th>
                 <th>Description</th>
               </tr>
-              <tr class="lunch"><td class="t">08:00 - 08:45 AM</td><td>Registration/Breakfast</td><td>Assorted donuts, Sausage Kolachees, Fresh Juices, Fruit, Yogurts &amp; Granola</td></tr>
+              <tr class="lunch"><td class="t">08:00 - 08:45 AM</td><td>Registration/Breakfast</td><td>Assorted Donuts, Sausage Kolachees, Fresh Juices, Fruit, Yogurts &amp; Granola</td></tr>
               <tr class="welcome"><td class="t">08:45 - 09:00 AM</td><td>Welcome</td><td></td></tr>
               <tr><td class="t">09:00 - 10:00 AM</td><td>Dave Thomas</td><td>Opening Keynote</td></tr>
               <tr><td class="t">10:00 - 10:45 AM</td><td>Richard Bishop</td><td class="ttl">The First Few Sips</td></tr>
@@ -168,7 +168,7 @@
                 <th>Speaker</th>
                 <th>Description</th>
               </tr>
-              <tr class="lunch"><td class="t">08:00 - 09:00 AM</td><td>Registration/Breakfast</td><td>Assorted donuts, Breakfast Tacos, Fresh Baked Scones, Fresh Juices, Fruit, Yogurts &amp; Granola</td></tr>
+              <tr class="lunch"><td class="t">08:00 - 09:00 AM</td><td>Registration/Breakfast</td><td>Assorted Donuts, Breakfast Tacos, Fresh Baked Scones, Fresh Juices, Fruit, Yogurts &amp; Granola</td></tr>
               <tr><td class="t">09:00 - 09:45 AM</td><td>Robert Virding</td><td class="ttl">Erlang Rationale</td></tr>
               <tr><td class="t">09:45 - 10:30 AM</td><td>Francesco Cesarini</td><td class="ttl">Thinking in a Highly Concurrent, Mostly-functional Language</td></tr>
               <tr class="break"><td>10:30 - 10:45 AM</td><td>BREAK</td><td></td></tr>
@@ -183,7 +183,7 @@
 
             </table>
             <br> <br>
-            <p>COMMONS: Served All Day: Fresh Brewed Coffee, Decaf & Hot Herbal Teas and Sodas
+            <p>COMMONS: Served All Day: Fresh Brewed Coffee, Decaf & Hot Herbal Teas, and Sodas
             </p>
 
         </div>
