logos, images, and some styling adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
+  <!--
     <div class="navbar-wrapper">
       <div class="container">
 
@@ -43,10 +44,10 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-<!--
+
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
--->
+
                 <li><a href="https://www.formstack.com/forms/?1710402-y4rOTw9FLr">Contact</a></li>
               </ul>
             </div>
@@ -55,7 +56,7 @@
 
       </div>
     </div>
-
+-->
 
     <!-- Carousel
     ================================================== -->
@@ -67,20 +68,21 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img class="img-responsive" src="/images/austin3.jpg" width="900" alt="ElixirConf in Austin">
+          <img class="img-responsive" src="/images/austin3_80.png" width="900" alt="ElixirConf in Austin">
           <div class="container">
             <div class="carousel-caption">
-              <h1>ElixirConf 2014</h1>
-              <h2>July 25-26, 2014  Austin, TX</h2>
+              <img src="images/ElixirConf_Logo_v10.png" width:"100%" alt:"ElixirConf 2014">
+              <h1>July 25-26, 2014  Austin, TX</h1>
               <p>Registration Now Open!</p>
-              <p><a class="btn btn-lg btn-primary" href="https://www.eventbrite.com/e/elixirconf-2014-tickets-11044184453" role="button">Reserve your seat</a></p>
+              <!-- <p><a class="btn btn-lg btn-primary" href="https://www.eventbrite.com/e/elixirconf-2014-tickets-11044184453" role="button">Reserve your seat</a></p> -->
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="/images/lsrc3.jpg" alt="ElixirConf in Austin">
+          <img src="/images/lsrc3_20.png" alt="ElixirConf in Austin">
           <div class="container">
             <div class="carousel-caption">
+                <img src="images/ElixirConf_Logo_v10.png" width:"100%" alt:"ElixirConf 2014">
                 <h1>Venue: Norris Conference Center</h1>
               <p>2525 W. Anderson Lane, Suite 365, Austin, Texas 78757</p>
             </div>
@@ -100,7 +102,7 @@
     <div class="container marketing">
       <div class="row text-center">
         <div class="col-lg-4 col-lg-push-4">
-        <h2>ElixirConf 2014, July&nbsp;25&#8209;26,&nbsp;Austin,&nbsp;TX</h2>
+        <!-- <h2>ElixirConf 2014, July&nbsp;25&#8209;26,&nbsp;Austin,&nbsp;TX</h2> -->
         <a class="btn-lg btn-primary" href="https://www.eventbrite.com/e/elixirconf-2014-tickets-11044184453" >Reserve your seat</a>
       </div>
     </div>
@@ -570,22 +572,22 @@ By the end of my talk I hope other people will feel the same way as I do about E
 
       <hr class="featurette-divider">
 
+<!-- TEST 2 -->
+
       <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/images/elixir-logo2.png" width="450px" alt="Registration now open">
-        </div>
         <div class="col-md-7">
+          <img class="featurette-image img-responsive" src="/images/ElixirConf_Logo_v09.png" width="365px" alt="Registration now open">
+        </div>
+        <div class="col-md-5">
           <a href="https://www.eventbrite.com/e/elixirconf-2014-tickets-11044184453">
             <h2 class="featurette-heading">Registration</h2></a>
           <p class="lead">
           Early bird tickets are avaialble now until June 1.
           </p>
         </div>
-      </div>
 
-      <hr class="featurette-divider">
+        <div class="featurette-spacer">&nbsp;</div>
 
-      <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Venue: 
             <a href="http://norriscenters.com/Austin/">
@@ -600,6 +602,8 @@ By the end of my talk I hope other people will feel the same way as I do about E
           <img class="featurette-image img-responsive" src="/images/norris.jpg" alt="Norris Conference Center">
         </div>
       </div>
+
+
 
       <hr class="featurette-divider">
 
@@ -637,6 +641,33 @@ By the end of my talk I hope other people will feel the same way as I do about E
       </div>
 
       <hr class="featurette-divider">
+
+      <div class="row">
+        <div class="col-md-12 center-block">
+          <span class="app-title center-block text-center">Sponsors</span>
+        <br /><br />
+        </div>
+        <div class="col-md-12">
+          <div class="col-md-3">
+            <h2 class="text-center">&nbsp;</h2>
+          </div>
+          <div class="col-md-3">
+            <a href="http://twitter.com/capitalfactory" target="_blank">
+            <img class="img center-block" 
+              src="/images/capitalFactory_logo.png" alt="Capital Factory"> </a>
+          </div>
+          <div class="col-md-3">
+            <a href="http://vulk.co" target="_blank">
+            <img class="img center-block" 
+              src="/images/vulk_logo.png" alt="Vulk"></a>
+          </div>
+          <div class="col-md-3">
+            <h2 class="text-center">&nbsp;</h2>
+          </div>
+        </div>
+      </div>
+      <hr class="featurette-divider">
+
 
       <div class="row featurette">
         <div class="col-md-7">
