--- a/public/index.html
+++ b/public/index.html
@@ -648,7 +648,7 @@ By the end of my talk I hope other people will feel the same way as I do about E
         <br /><br />
         </div>
         <div class="col-md-12">
-          <div class="col-md-3">
+          <div class="col-md-1">
             <h2 class="text-center">&nbsp;</h2>
           </div>
           <div class="col-md-3">
@@ -662,12 +662,29 @@ By the end of my talk I hope other people will feel the same way as I do about E
               src="/images/vulk_logo.png" alt="Vulk"></a>
           </div>
           <div class="col-md-3">
-            <h2 class="text-center">&nbsp;</h2>
+            <a href="http://plataformatec.com.br/" target="_blank">
+            <img class="img center-block" 
+              src="/images/ptec-logo-horizontal.png" width="500px" alt="Vulk"></a>
           </div>
         </div>
       </div>
-      <hr class="featurette-divider">
 
+      <div class="row">
+        <div class="col-md-12 center-block">
+        </div>
+        <div class="col-md-12">
+          <div class="col-md-1">
+            <h2 class="text-center">&nbsp;</h2>
+          </div>
+          <div class="col-md-3">
+            <a href="http://twitter.com/elixirsips" target="_blank"><span class="sips">@ElixirSips</span></a>
+          </div>
+        </div>
+      </div>
+
+
+
+      <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-7">
