fixed the two new sponsors

--- a/public/index.html
+++ b/public/index.html
@@ -648,8 +648,10 @@ By the end of my talk I hope other people will feel the same way as I do about E
         <br /><br />
         </div>
         <div class="col-md-12">
-          <div class="col-md-1">
-            <h2 class="text-center">&nbsp;</h2>
+          <div class="col-md-3">
+            <a href="http://twitter.com/elixirsips" target="_blank">
+            <img class="img-circle center-block" 
+              src="/images/elixirSip_logo.png" alt="Elixir Sip"> </a>
           </div>
           <div class="col-md-3">
             <a href="http://twitter.com/capitalfactory" target="_blank">
@@ -664,25 +666,10 @@ By the end of my talk I hope other people will feel the same way as I do about E
           <div class="col-md-3">
             <a href="http://plataformatec.com.br/" target="_blank">
             <img class="img center-block" 
-              src="/images/ptec-logo-horizontal.png" width="500px" alt="Vulk"></a>
+              src="/images/ptec_sm_logo.png" alt="Vulk"></a>
           </div>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-md-12 center-block">
-        </div>
-        <div class="col-md-12">
-          <div class="col-md-1">
-            <h2 class="text-center">&nbsp;</h2>
-          </div>
-          <div class="col-md-3">
-            <a href="http://twitter.com/elixirsips" target="_blank"><span class="sips">@ElixirSips</span></a>
-          </div>
-        </div>
-      </div>
-
-
 
       <hr class="featurette-divider">
 
