updated ptec logo

--- a/public/index.html
+++ b/public/index.html
@@ -666,7 +666,7 @@ By the end of my talk I hope other people will feel the same way as I do about E
           <div class="col-md-3">
             <a href="http://plataformatec.com.br/" target="_blank">
             <img class="img center-block" 
-              src="/images/ptec_sm_logo.png" alt="Vulk"></a>
+              src="/images/ptec-logo-eng.png" alt="Vulk"></a>
           </div>
         </div>
       </div>
