added oreilly and rackspace

--- a/public/index.html
+++ b/public/index.html
@@ -671,6 +671,28 @@ By the end of my talk I hope other people will feel the same way as I do about E
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-12 center-block">
+        <br /><br />
+        </div>
+        <div class="col-md-12">
+          <div class="col-md-3">
+            <a href="http://www.oreilly.com/" target="_blank">
+            <img class="center-block"
+              src="/images/ORM_logo_box75-lg.jpg" alt="O'Reilly"></a>
+          </div>
+          <div class="col-md-3">
+            <a href="http://rack.to/elixirconf" target="_blank">
+            <img class="center-block" 
+              src="/images/Rackspace.jpg" alt="Rackspace"></a>
+          </div>
+          <div class="col-md-3">
+          </div>
+          <div class="col-md-3">
+          </div>
+        </div>
+      </div>
+
       <hr class="featurette-divider">
 
       <div class="row featurette">
