added a  new sponsors

--- a/public/index.html
+++ b/public/index.html
@@ -669,6 +669,19 @@ By the end of my talk I hope other people will feel the same way as I do about E
               src="/images/ptec_sm_logo.png" alt="Vulk"></a>
           </div>
         </div>
+        <div class="col-md-12">
+          <div class="col-md-3">&nbsp;
+          </div>
+          <div class="col-md-3">
+            <a href="http://www.oreilly.com" target="_blank">
+            <img class="img center-block" 
+              src="/images/ORM_logo_box75_hex.jpg" alt="Oreilly"> </a>
+          </div>
+          <div class="col-md-3">&nbsp;
+          </div>
+          <div class="col-md-3">&nbsp;
+          </div>
+        </div>
       </div>
 
       <hr class="featurette-divider">
