cleaned up UI section containing sponsors

--- a/public/index.html
+++ b/public/index.html
@@ -666,7 +666,7 @@ By the end of my talk I hope other people will feel the same way as I do about E
           <div class="col-md-3">
             <a href="http://plataformatec.com.br/" target="_blank">
             <img class="img center-block" 
-              src="/images/ptec-logo-eng.png" alt="Vulk"></a>
+              src="/images/ptec-logo-eng.png" alt="Plataformatec"></a>
           </div>
         </div>
       </div>
@@ -679,25 +679,12 @@ By the end of my talk I hope other people will feel the same way as I do about E
           <div class="col-md-3">
             <a href="http://www.oreilly.com/" target="_blank">
             <img class="center-block"
-              src="/images/ORM_logo_box75-lg.jpg" alt="O'Reilly"></a>
+              src="/images/oreilly_logo.png" alt="O'Reilly"></a>
           </div>
           <div class="col-md-3">
             <a href="http://rack.to/elixirconf" target="_blank">
             <img class="center-block" 
               src="/images/Rackspace.jpg" alt="Rackspace"></a>
-          </div>
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-          </div>
-        </div>
-        <div class="col-md-12">
-          <div class="col-md-3">&nbsp;
-          </div>
-          <div class="col-md-3">
-            <a href="http://www.oreilly.com" target="_blank">
-            <img class="img center-block" 
-              src="/images/ORM_logo_box75_hex.jpg" alt="Oreilly"> </a>
           </div>
           <div class="col-md-3">&nbsp;
           </div>
