--- a/public/index.html
+++ b/public/index.html
@@ -687,6 +687,9 @@ By the end of my talk I hope other people will feel the same way as I do about E
               src="/images/Rackspace.jpg" alt="Rackspace"></a>
           </div>
           <div class="col-md-3">&nbsp;
+            <a href="http://www.door64.com/" target="_blank">
+            <img class="center-block" 
+            src="/images/door64-300x109-elixirconf.png" width="250px" alt="door64"></a>
           </div>
           <div class="col-md-3">&nbsp;
           </div>
