--- a/public/index.html
+++ b/public/index.html
@@ -692,6 +692,9 @@ By the end of my talk I hope other people will feel the same way as I do about E
             src="/images/door64-300x109-elixirconf.png" width="250px" alt="door64"></a>
           </div>
           <div class="col-md-3">&nbsp;
+            <a href="http://confreaks.com/" target="_blank">
+            <img class="center-block" 
+            src="/images/confreaks_logo.png" alt="Confreaks"></a>
           </div>
         </div>
       </div>
