new sponsor logos

--- a/public/index.html
+++ b/public/index.html
@@ -676,25 +676,42 @@ By the end of my talk I hope other people will feel the same way as I do about E
         <br /><br />
         </div>
         <div class="col-md-12">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <a href="http://www.oreilly.com/" target="_blank">
             <img class="center-block"
               src="/images/oreilly_logo.png" alt="O'Reilly"></a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <a href="http://rack.to/elixirconf" target="_blank">
             <img class="center-block" 
               src="/images/Rackspace.jpg" alt="Rackspace"></a>
           </div>
-          <div class="col-md-3">&nbsp;
+          <div class="col-md-4">
             <a href="http://www.door64.com/" target="_blank">
             <img class="center-block" 
             src="/images/door64-300x109-elixirconf.png" width="250px" alt="door64"></a>
           </div>
-          <div class="col-md-3">&nbsp;
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12 center-block">
+        <br /><br />
+        </div>
+        <div class="col-md-12">
+        <div class="col-md-3">&nbsp;
+          </div>
+          <div class="col-md-3">
             <a href="http://confreaks.com/" target="_blank">
             <img class="center-block" 
             src="/images/confreaks_logo.png" alt="Confreaks"></a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://www.erlang-solutions.com/" target="_blank">
+            <img class="center-block" 
+              src="/images/ESL_logo.png" alt="Erlang Solutions"></a>
+          </div>
+          <div class="col-md-3">&nbsp;
           </div>
         </div>
       </div>
