new sponsor logos

--- a/public/index.html
+++ b/public/index.html
@@ -699,19 +699,20 @@ By the end of my talk I hope other people will feel the same way as I do about E
         <br /><br />
         </div>
         <div class="col-md-12">
-        <div class="col-md-3">&nbsp;
-          </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <a href="http://confreaks.com/" target="_blank">
             <img class="center-block" 
             src="/images/confreaks_logo.png" alt="Confreaks"></a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <a href="https://www.erlang-solutions.com/" target="_blank">
             <img class="center-block" 
               src="/images/ESL_logo.png" alt="Erlang Solutions"></a>
           </div>
-          <div class="col-md-3">&nbsp;
+          <div class="col-md-4">
+            <a href="http://www.manning.com/" target="_blank">
+            <img class="center-block" 
+            src="/images/manning_logo.png" alt="Manning"></a>
           </div>
         </div>
       </div>
